refactor+style: correct the styles for adaptive design

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </h1>
             <p class="profile__title">Explorer</p>
           </div>
-          <img class="button button_type_add" src="./images/add_button.svg" />
+          <div class="button button_type_add">
+            <img class="button__icon" src="./images/add_button.svg" />
+          </div>
         </section>
         <section class="photos-grid">
           <ul class="photos-grid__list">
