--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
   <body>
     <div class="page">
       <header class="header">
-        <img class="logo" src="./images/logo.svg" />
+        <div class="logo header__logo"></div>
       </header>
       <main class="content">
         <section class="profile">
-          <img src="./images/profile.png" class="profile__avatar" />
+          <img
+            src="./images/profile.png"
+            class="profile__avatar"
+            alt="A profile photo of Jacques Cousteau"
+          />
           <div class="profile__info">
             <div class="profile__name-line">
               <h1 class="profile__name">Jacques Cousteau</h1>
-              <img
+              <button
                 class="button profile__edit-button"
-                src="./images/edit_button.svg"
-              />
+                name="edit-button"
+              ></button>
             </div>
             <p class="profile__title">Explorer</p>
           </div>
-          <div class="button profile__add-button">
-            <img class="button__icon" src="./images/add_button.svg" />
-          </div>
+          <div class="button profile__add-button"></div>
         </section>
         <section class="photos-grid">
           <ul class="photos-grid__list">
@@ -41,51 +43,66 @@
               <img
                 class="photos-grid__photo"
                 src="./images/yosemitevalley.png"
+                alt="Yosemite Valley"
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Yosemite Valley</p>
-                <button class="heart"></button>
+                <button class="heart" name="like-button"></button>
               </div>
             </li>
             <li class="photos-grid__card">
-              <img class="photos-grid__photo" src="./images/lakelouise.png" />
+              <img
+                class="photos-grid__photo"
+                src="./images/lakelouise.png"
+                alt="Lake Louise"
+              />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Lake Louise</p>
-                <button class="heart"></button>
+                <button class="heart" name="like-button"></button>
               </div>
             </li>
             <li class="photos-grid__card">
               <img
                 class="photos-grid__photo"
                 src="./images/baldmountains.png"
+                alt="Bald Mountains"
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Bald Mountains</p>
-                <button class="heart"></button>
+                <button class="heart" name="like-button"></button>
               </div>
             </li>
             <li class="photos-grid__card">
-              <img class="photos-grid__photo" src="./images/latemar.png" />
+              <img
+                class="photos-grid__photo"
+                src="./images/latemar.png"
+                alt="Latemar"
+              />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Latemar</p>
-                <button class="heart"></button>
+                <button class="heart" name="like-button"></button>
               </div>
             </li>
             <li class="photos-grid__card">
               <img
                 class="photos-grid__photo"
                 src="./images/vanoisenational.png"
+                alt="Vanoise National Park"
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Vanoise National Park</p>
-                <button class="heart"></button>
+                <button class="heart" name="like-button"></button>
               </div>
             </li>
             <li class="photos-grid__card">
-              <img class="photos-grid__photo" src="./images/lagodibraies.png" />
+              <img
+                class="photos-grid__photo"
+                src="./images/lagodibraies.png"
+                alt="Lago di Braies"
+              />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Lago di Braies</p>
-                <button class="heart"></button>
+                <button class="heart" name="like-button"></button>
               </div>
             </li>
           </ul>
@@ -96,10 +113,10 @@
       </footer>
       <section class="popup">
         <div class="popup__container">
-          <img
-            src="./images/closeicon.svg"
+          <button
             class="popup__close-button button"
-          />
+            name="close-button"
+          ></button>
           <h2 class="popup__header">Edit profile</h2>
           <form class="popup__form" name="edit">
             <input
