--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
               <h1 class="profile__name">Jacques Cousteau</h1>
               <button
                 class="button profile__edit-button"
-                name="edit-button"
+                type="button"
+                aria-label="edit-button"
               ></button>
             </div>
             <p class="profile__title">Explorer</p>
           </div>
-          <div class="button profile__add-button"></div>
+          <button
+            class="button profile__add-button"
+            type="button"
+            aria-label="add-button"
+          ></button>
         </section>
         <section class="photos-grid">
           <ul class="photos-grid__list">
@@ -47,7 +52,11 @@
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Yosemite Valley</p>
-                <button class="heart" name="like-button"></button>
+                <button
+                  class="heart"
+                  type="button"
+                  aria-label="like-button"
+                ></button>
               </div>
             </li>
             <li class="photos-grid__card">
@@ -58,7 +67,11 @@
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Lake Louise</p>
-                <button class="heart" name="like-button"></button>
+                <button
+                  class="heart"
+                  type="button"
+                  aria-label="like-button"
+                ></button>
               </div>
             </li>
             <li class="photos-grid__card">
@@ -69,7 +82,11 @@
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Bald Mountains</p>
-                <button class="heart" name="like-button"></button>
+                <button
+                  class="heart"
+                  type="button"
+                  aria-label="like-button"
+                ></button>
               </div>
             </li>
             <li class="photos-grid__card">
@@ -80,7 +97,11 @@
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Latemar</p>
-                <button class="heart" name="like-button"></button>
+                <button
+                  class="heart"
+                  type="button"
+                  aria-label="like-button"
+                ></button>
               </div>
             </li>
             <li class="photos-grid__card">
@@ -91,7 +112,11 @@
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Vanoise National Park</p>
-                <button class="heart" name="like-button"></button>
+                <button
+                  class="heart"
+                  type="button"
+                  aria-label="like-button"
+                ></button>
               </div>
             </li>
             <li class="photos-grid__card">
@@ -102,7 +127,11 @@
               />
               <div class="photos-grid__label">
                 <p class="photos-grid__location">Lago di Braies</p>
-                <button class="heart" name="like-button"></button>
+                <button
+                  class="heart"
+                  type="button"
+                  aria-label="like-button"
+                ></button>
               </div>
             </li>
           </ul>
@@ -115,7 +144,8 @@
         <div class="popup__container">
           <button
             class="popup__close-button button"
-            name="close-button"
+            type="button"
+            aria-label="close-button"
           ></button>
           <h2 class="popup__header">Edit profile</h2>
           <form class="popup__form" name="edit">
@@ -131,7 +161,11 @@
               value="About me"
               name="profile-title"
             />
-            <button type="submit" class="popup__save-button" value="Save">
+            <button
+              type="submit"
+              class="button popup__save-button"
+              value="Save"
+            >
               Save
             </button>
           </form>
