--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <template id="card-template">
               <li class="photos-grid__card">
                 <img class="photos-grid__photo" src="" alt="" />
+                <div class="photos-grid__popup popup">
+                  <div class="photos-grid__popup-container">
+                    <img class="photos-grid__popup-image" src="" alt="" />
+                    <button class="popup__close-button button" type="button" aria-label="close-button"></button>
+                    <p class="photos-grid__popup-text"></p>
+                  </div>
+                </div>
                 <button class="photos-grid__trash button" type="button" aria-label="delete-button"></button>
                 <div class="photos-grid__label">
                   <p class="photos-grid__location"></p>
