--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </li>
       </template>
     </div>
+    <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
