fix: update the classes for picture-popup

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </form>
         </div>
       </section>
-      <div class="photos-grid__popup popup">
-        <div class="photos-grid__popup-container">
-          <img class="photos-grid__popup-image" src=" " alt="" />
+      <div class="picture-popup popup">
+        <div class="picture-popup__popup-container">
+          <img class="picture-popup__popup-image" src=" " alt="" />
           <button class="popup__close-button button" type="button" aria-label="close-button"></button>
-          <p class="photos-grid__popup-text"></p>
+          <p class="picture-popup__popup-text"></p>
         </div>
       </div>
       <template id="card-template">
