--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           <form class="popup__form" name="edit" novalidate>
             <label class="popup__field">
               <input type="text" class="popup__input popup__input_type_name" id="name-input" value="Name" name="profile-name" minlength="2" maxlength="40" required />
-              <span class="popup__input-error name-input-error">show some error message</span>
+              <span class="popup__input-error name-input-error"></span>
             </label>
             <label class="popup__field">
               <input type="text" class="popup__input popup__input_type_job" id="title-input" value="About me" name="profile-title" minlength="2" maxlength="200" required />
-              <span class="popup__input-error title-input-error">show some error message</span>
+              <span class="popup__input-error title-input-error"></span>
             </label>
             <button type="submit" class="button popup__save-button" value="Save">Save</button>
           </form>
@@ -56,8 +56,14 @@
           <button class="popup__close-button button" type="button" aria-label="close-button"></button>
           <h2 class="popup__header">New place</h2>
           <form class="popup__form" name="add-card" novalidate>
-            <input type="text" class="popup__input popup__input_type_place" value="" placeholder="Title" name="place-title" />
-            <input type="text" class="popup__input popup__input_type_img-src" value="" placeholder="Image link" name="image-source" />
+            <label class="popup__field">
+              <input type="text" class="popup__input popup__input_type_place" id="place-input" value="" placeholder="Title" name="place-title" minlength="1" maxlength="30" required />
+              <span class="popup__input-error place-input-error"></span>
+            </label>
+            <label class="popup__field">
+              <input type="url" class="popup__input popup__input_type_img-src" id="url-input" value="" placeholder="Image link" name="image-source" required />
+              <span class="popup__input-error url-input-error"></span>
+            </label>
             <button type="submit" class="button popup__save-button" value="Create">Create</button>
           </form>
         </div>
