--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       </template>
     </div>
     <script src="./scripts/cards.js"></script>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
