--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
           <p class="picture-popup__popup-text"></p>
         </div>
       </div>
-      <template id="card-template">
-        <li class="photos-grid__card">
-          <img class="photos-grid__photo" src=" " alt=" " />
-          <button class="photos-grid__trash button" type="button" aria-label="delete-button"></button>
-          <div class="photos-grid__label">
-            <p class="photos-grid__location"></p>
-            <button class="heart" type="button" aria-label="like-button"></button>
-          </div>
-        </li>
-      </template>
     </div>
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/cards.js" defer></script>
+    <script src="./scripts/validate.js" defer></script>
+    <script src="./scripts/index.js" defer></script>
+    <template id="card-template">
+      <li class="photos-grid__card">
+        <img class="photos-grid__photo" src=" " alt=" " />
+        <button class="photos-grid__trash button" type="button" aria-label="delete-button"></button>
+        <div class="photos-grid__label">
+          <p class="photos-grid__location"></p>
+          <button class="heart" type="button" aria-label="like-button"></button>
+        </div>
+      </li>
+    </template>
   </body>
 </html>
