refactor: initial stage of refctoring to match oop

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/cards.js" defer></script>
-    <script src="./scripts/validate.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <!-- <script src="./scripts/cards.js" defer></script>
+    <script src="./scripts/validate.js" defer></script> -->
+    <script type="module" src="./scripts/index.js" defer></script>
     <template id="card-template">
       <li class="photos-grid__card">
         <img class="photos-grid__photo" src=" " alt=" " />
