fix: small fixes

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Israel Berko" />
     <meta name="description" content="Submission for project number 4 in web developement course by Practicum Yandex" />
     <!-- <link rel="stylesheet" href="./pages/index.css" /> -->
-    <link rel="icon" href="./images/icon.ico" />
+    <link rel="icon" href="./images/favicon.ico" />
     <title>Around The U.S.</title>
   </head>
 
