--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,17 @@
       </header>
       <main class="content">
         <section class="profile">
-          <img id="profile-avatar" class="profile__avatar" alt="A profile photo of Jacques Cousteau" />
+          <div id="profile-avatar" class="profile__avatar">
+            <div class="profile__avatar-cover">
+              <img id="profile-avatar-edit" class="profile__avatar-edit" alt="Edit icon that covers the user's profile avatar" />
+            </div>
+          </div>
           <div class="profile__info">
             <div class="profile__name-line">
-              <h1 class="profile__name">Jacques Cousteau</h1>
+              <h1 class="profile__name"></h1>
               <button class="button profile__edit-button" type="button" aria-label="edit-button"></button>
             </div>
-            <p class="profile__title">Explorer</p>
+            <p class="profile__title"></p>
           </div>
           <button class="button profile__add-button" type="button" aria-label="add-button"></button>
         </section>
@@ -44,8 +48,21 @@
               <span class="popup__input-error name-input-error"></span>
             </label>
             <label class="popup__field">
-              <input type="text" class="popup__input popup__input_type_job" id="title-input" name="job" minlength="2" maxlength="200" required />
+              <input type="text" class="popup__input popup__input_type_job" id="title-input" name="about" minlength="2" maxlength="200" required />
               <span class="popup__input-error title-input-error"></span>
+            </label>
+            <button type="submit" class="button popup__save-button" value="Save">Save</button>
+          </form>
+        </div>
+      </section>
+      <section class="popup popup_type_edit-avatar">
+        <div class="popup__container">
+          <button class="popup__close-button button" type="button" aria-label="close-button"></button>
+          <h2 class="popup__header">Change profile picture</h2>
+          <form class="popup__form popup__form_type_edit-avatar" name="edit-avatar" novalidate>
+            <label class="popup__field">
+              <input type="url" class="popup__input popup__input_type_avatar-src" id="url-input" placeholder="Image link" name="avatar" required />
+              <span class="popup__input-error url-input-error"></span>
             </label>
             <button type="submit" class="button popup__save-button" value="Save">Save</button>
           </form>
@@ -68,13 +85,32 @@
           </form>
         </div>
       </section>
-      <div class="picture-popup popup">
+      <section class="popup popup_type_delete-card">
+        <div class="popup__container">
+          <button class="popup__close-button button" type="button" aria-label="close-button"></button>
+          <h2 class="popup__header">Are you sure?</h2>
+          <form class="popup__form popup__form_type_delete-card" name="delete" novalidate>
+            <button type="submit" class="button popup__save-button" value="Yes">Yes</button>
+          </form>
+        </div>
+      </section>
+      <section class="popup popup_type_error">
+        <div class="popup__container">
+          <button class="popup__close-button button" type="button" aria-label="close-button"></button>
+          <h2 class="popup__header">An error occurred.</h2>
+          <p class="popup__text">test</p>
+          <form class="popup__form popup__form_type_error" name="delete" novalidate>
+            <button type="submit" class="button popup__save-button" value="OK">OK</button>
+          </form>
+        </div>
+      </section>
+      <section class="picture-popup popup">
         <div class="picture-popup__popup-container">
           <img class="picture-popup__popup-image" src=" " alt=" " />
           <button class="popup__close-button button" type="button" aria-label="close-button"></button>
           <p class="picture-popup__popup-text"></p>
         </div>
-      </div>
+      </section>
     </div>
     <template id="card-template">
       <li class="photos-grid__card">
@@ -82,7 +118,10 @@
         <button class="photos-grid__trash button" type="button" aria-label="delete-button"></button>
         <div class="photos-grid__label">
           <p class="photos-grid__location"></p>
-          <button class="heart" type="button" aria-label="like-button"></button>
+          <div class="photos-grid__like-wrapper">
+            <button class="photos-grid__like heart" type="button" aria-label="like-button"></button>
+            <p class="photos-grid__like-counter">0</p>
+          </div>
         </div>
       </li>
     </template>
