fix: fix errors

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
           <h2 class="popup__header">Change profile picture</h2>
           <form class="popup__form popup__form_type_edit-avatar" name="edit-avatar" novalidate>
             <label class="popup__field">
-              <input type="url" class="popup__input popup__input_type_avatar-src" id="avatar-avatar-url-input" placeholder="Image link" name="avatar" required />
+              <input type="url" class="popup__input popup__input_type_avatar-src" id="avatar-url-input" placeholder="Image link" name="avatar" required />
               <span class="popup__input-error avatar-url-input-error"></span>
             </label>
             <button type="submit" class="button popup__save-button" value="Save">Save</button>
