--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <section class="profile">
           <div id="profile-avatar" class="profile__avatar">
             <div class="profile__avatar-cover">
-              <img id="profile-avatar-edit" class="profile__avatar-edit" src=" " alt="Edit icon that covers the user's profile avatar" />
+              <img id="edit-avatar-icon" class="profile__avatar-edit" src=" " alt="Edit icon that covers the user's profile avatar" />
             </div>
           </div>
           <div class="profile__info">
